--- a/gb/19/8/7/n11437196.md
+++ b/gb/19/8/7/n11437196.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lodojv3329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/lodojv3329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/lodojv3329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lodojv3329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lodojv3329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lodojv3329/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lodojv3329/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lodojv3329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>创新看得见 中市庇护工场秋节好礼开卖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/d3a1797e8e8644f498618eac5898b87b-600x400.jpg" />
 <h6>7日宣导会现场，邀集台中市15家身心障碍福利机构团体及庇护工场设摊，推销精致的月饼礼盒及手工产品。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年08月07日讯】（大纪元记者黄玉燕台湾台中报导）<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>将至，台中市<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E8%BA%AB%E9%9A%9C%E5%9B%A2%E4%BD%93.md#1">身障团体</a>与<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E5%BA%87%E6%8A%A4%E5%B7%A5%E5%9C%BA.md#1">庇护工场</a>手作的秋节礼品可不马虎，看得见年年创新制作高CP值的伴手好礼。市府社会局7日举办展示会，鼓励企业界优先购买相关产品，同时邀请民众“一并做爱心、让送礼也能更加贴心！”期待今年能突破去年纪录、顺利冲出五万份以上的好成绩。</p>
-<p>7日宣导会现场，邀集台中市15家身心障碍福利机构团体及<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E5%BA%87%E6%8A%A4%E5%B7%A5%E5%9C%BA.md#1">庇护工场</a>设摊，推销精致的<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md#1">月饼</a>礼盒及手工产品。副市长杨琼璎在社会局副局长陈坤皇陪同下，逐一问候摊位，并颁发感谢状给热心认购产品的企业；同时推荐其中10家已加入台中购物节优惠商家，呼吁大家以实际行动支持“作爱心、抽大奖。”</p>
-<figure id="attachment_11437199" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/4a1dbc62985104f45ffe8a38097341f9.jpg"><img class="size-large wp-image-11437199" src="https://i.epochtimes.com/assets/uploads/2019/08/4a1dbc62985104f45ffe8a38097341f9-600x369.jpg" alt="" width="600" b="369" /></a><figcaption class="wp-caption-text">唐宝宝推中秋好礼。（黄玉燕／大纪元）</figcaption></figure>
-<p>社会局表示，台中市身心障碍福利机构团体及庇护工场每年都为<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>做足准备，今年也不例外，<ahref="https://github.com/lodojv3329/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md#1">月饼</a>礼盒部分，微笑天使推出豪华及超值中秋礼盒；伊甸今年邀请世界冠军王鹏杰指导草莓酥与草莓烧菓子，推出“苺好中秋系列礼盒”；立达的慢兔兔月饼礼盒，在包装设计上配合减塑；玛利妈妈则推出咖啡饼干及澄意月饼礼盒。</p>
+<p>【大纪元2019年08月07日讯】（大纪元记者黄玉燕台湾台中报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>将至，台中市<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BA%AB%E9%9A%9C%E5%9B%A2%E4%BD%93.md#1">身障团体</a>与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BA%87%E6%8A%A4%E5%B7%A5%E5%9C%BA.md#1">庇护工场</a>手作的秋节礼品可不马虎，看得见年年创新制作高CP值的伴手好礼。市府社会局7日举办展示会，鼓励企业界优先购买相关产品，同时邀请民众“一并做爱心、让送礼也能更加贴心！”期待今年能突破去年纪录、顺利冲出五万份以上的好成绩。</p>
+<p>7日宣导会现场，邀集台中市15家身心障碍福利机构团体及<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BA%87%E6%8A%A4%E5%B7%A5%E5%9C%BA.md#1">庇护工场</a>设摊，推销精致的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md#1">月饼</a>礼盒及手工产品。副市长杨琼璎在社会局副局长陈坤皇陪同下，逐一问候摊位，并颁发感谢状给热心认购产品的企业；同时推荐其中10家已加入台中购物节优惠商家，呼吁大家以实际行动支持“作爱心、抽大奖。”</p>
+<figure id="attachment_11437199" aria-describedby="caption-attachment-11437199" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/4a1dbc62985104f45ffe8a38097341f9.jpg"><img class="size-large wp-image-11437199" src="https://i.epochtimes.com/assets/uploads/2019/08/4a1dbc62985104f45ffe8a38097341f9-600x369.jpg" alt="" width="600" b="369" /></a><figcaption id="caption-attachment-11437199" class="wp-caption-text">唐宝宝推中秋好礼。（黄玉燕／大纪元）</figcaption></figure>
+<p>社会局表示，台中市身心障碍福利机构团体及庇护工场每年都为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>做足准备，今年也不例外，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%88%E9%A5%BC.md#1">月饼</a>礼盒部分，微笑天使推出豪华及超值中秋礼盒；伊甸今年邀请世界冠军王鹏杰指导草莓酥与草莓烧菓子，推出“苺好中秋系列礼盒”；立达的慢兔兔月饼礼盒，在包装设计上配合减塑；玛利妈妈则推出咖啡饼干及澄意月饼礼盒。</p>
 <p>还有莲心的赏月、吉星拱月及缤纷星月礼盒；而十方今年推出创意风味月饼礼盒，有台式月饼、日式桃山月饼、凤梨酥及养生坚果塔，还有咸香美味的XO干贝Q饼等。</p>
 <p>社会局指出，除了月饼礼盒之外，民众也可选择实用手作礼品，例如同心圆、自闭症协会、盲人协会、美丽境界协会精心制作的手工皂，或是信望爱推出的月饼冷皂礼盒及和菓子精油皂等。呼吁有意购买的民众、提早认购，让身障机构及庇护工场可以事先规划制作数量。</p>
 <p>责任编辑：陈玟绮</p>
@@ -18,48 +18,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/7/25/n11408049.md#1">丁当换租大房 砸百万装潢台北新的家</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/7/25/n11408861.md#1">明慧20周年报告：对社会主流民众的迫害</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/7/26/n11411491.md#1">麻州Randolph中秋庆典放飞孔明灯</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/7/30/n11419516.md#1">甘肃贫困县女县长5年收贿逾千万 细节曝光</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/7/31/n11420939.md#1">中秋伴手礼吹精品风 “茶与点心”结盟抢市</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/8/1/n11423626.md#1">中秋团圆做公益  助创世到植物人宅服务</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/18/n12337999.md#1">联手复古尪仔标插画  抢攻中秋月饼市场</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/17/n12337394.md#1">“台中州厅”6.3亿修复工程 估2022年完工</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/17/n12336962.md#1">加进豪宅元素 台中梧栖三民“好宅”上梁</a></li>
-<li><a href="https://github.com/lodojv3329/djy/blob/master/gb/20/8/16/n12334696.md#1">“好食金夏趴”登场 网罗30摊特色美食</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/25/n11408049.md#1">丁当换租大房 砸百万装潢台北新的家</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/26/n11411491.md#1">麻州Randolph中秋庆典放飞孔明灯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/30/n11419516.md#1">甘肃贫困县女县长5年收贿逾千万 细节曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/31/n11420939.md#1">中秋伴手礼吹精品风 “茶与点心”结盟抢市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/1/n11423626.md#1">中秋团圆做公益 助创世到植物人宅服务</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680620.md#1">台中YouBike2.0千站达标 最高周转率5在新光远百</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678509.md#1">中部美展首奖揭晓  19岁萧辅一版画作品《缄》</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11477432.md#1" target="_blank">共产暴政录：李大钊被绞死的真正原因</a></li><li><a href="https://github.com/lodojv3329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/19/n11396317.md#1" target="_blank">国防论坛基金会总裁：法轮功在反迫害最前线</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/8/n12316046.md#1">中国古代独步天下的天文科技成就</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/4/n12306294.md#1">“荷花定律”古代版：“行百里者半九十”</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/11/1/4/n3132042.md#1">巴洛克艺术（三）鲁本斯</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/16/n12335697.md#1">【薇羽看世间】以阿全面建交 美国剑指中共</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/16/n12334682.md#1">【一线采访视频版】向中产下手？业主：中共是土匪起家</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/17/n12336516.md#1">【拍案惊奇】川普“双胞”弟病逝 中国人需饥饿感？</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/14/n12331775.md#1">【新闻看点】北戴河内斗酣 习当局5误判挨批</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/15/n12332726.md#1">美第二波制裁或很快到来 包含制裁红二代</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/15/n12332782.md#1">【十字路口】数字人民币急飙 香江经济坠落</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/14/n12331591.md#1">否认嫌弃儿媳 赵树海：不会催高圆圆生二胎</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/14/n12331907.md#1">称大陆染疫就回台治疗 女版黄安刘乐妍遭炮轰</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/14/n12332074.md#1">与节目导演开心合照 章子怡天价酬劳被曝光</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/16/n12335475.md#1">李若彤首度公布真实年龄 冻龄外表震惊粉丝</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/15/n12333541.md#1">罗霈颖告别式众星友送行 与父长眠桃园大溪</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/16/n12334408.md#1">全球首例因疫情“亡国” 南半球小国宣布解散</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/14/n12331420.md#1">怎样自然坐正？掌握3要点 姿势不再歪</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/15/n12333887.md#1">大豆降坏胆固醇 预防动脉硬化 7种豆制品可常吃</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/15/n12333334.md#1">英女童天生脏器外露 肚上长“球” 现已2岁</a></li>
-<li><a href="https://github.com/rppzif378/djy/blob/master/gb/20/8/14/n12331937.md#1">【直播回放】肌力不足易胖老得快？4周减肥增肌、甩掉酸痛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lodojv3329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lodojv3329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/7/n11437196.htm">创新看得见 中市庇护工场秋节好礼开卖</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/7/n11437196.htm">创新看得见 中市庇护工场秋节好礼开卖</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/lodojv3329/djy/blob/master/gb/19/8/7/n11437196.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lodojv3329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lodojv3329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lodojv3329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lodojv3329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lodojv3329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/8/7/n11437196.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
